<resources>
    <string name="app_name">My Chat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="mail">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="missing_user">Missing input username</string>
    <string name="missing_email">Missing input email</string>
    <string name="missing_pass">Missing input password</string>
    <string name="missing_confirm_pass">Missing input confirm password</string>
    <string name="missing_confirm_pass_incorrect">Confirm password incorrect</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="tab_4">Tab 4</string>
    <string name="my_infor">Thông tin cá nhân</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="login_via">------ Login via ------</string>
    <string name="dont_have_account">You dont have account ? </string>
    <string name="search">Search</string>
    <string name="related_lessons">Bài học liên quan</string>
    <string name="show_more">Show more</string>
    <string name="comment">Comment</string>
    <string name="send">Send</string>
    <string name="like">Like</string>
    <string name="unknown_error">Unknown error</string>
    <string name="can_not_send_this_msg">Fail</string>
    <string name="reply">Reply</string>
    <string name="back_press">Press back again to quit.</string>
    <string name="can_not_get_user_id">Can not get user infor, restart app please</string>
    <string name="can_not_get_room_infor">Can not get room infor, try again</string>
    <string name="nodata">No data</string>
    <string name="auto_login">Auto login</string>
    <string name="logout">Logout</string>
    <string name="permission_denied">permission denied</string>
    <string name="details">Details</string>

</resources>
